; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68000_move_8.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68000_move_8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_cpu_ir = common dso_local global i32 0, align 4
@g_dasm_str = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"move.b  %s, %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @d68000_move_8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68000_move_8() #0 {
  %1 = alloca i8*, align 8
  %2 = load i32, i32* @g_cpu_ir, align 4
  %3 = call i8* @get_ea_mode_str_8(i32 %2)
  store i8* %3, i8** %1, align 8
  %4 = load i32, i32* @g_dasm_str, align 4
  %5 = load i8*, i8** %1, align 8
  %6 = load i32, i32* @g_cpu_ir, align 4
  %7 = ashr i32 %6, 9
  %8 = and i32 %7, 7
  %9 = load i32, i32* @g_cpu_ir, align 4
  %10 = ashr i32 %9, 3
  %11 = and i32 %10, 56
  %12 = or i32 %8, %11
  %13 = call i8* @get_ea_mode_str_8(i32 %12)
  %14 = call i32 @sprintf(i32 %4, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i8* %5, i8* %13)
  ret void
}

declare dso_local i8* @get_ea_mode_str_8(i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
